--- a/index.html
+++ b/index.html
@@ -1,66 +1,109 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Privacy Policy - Your App Name</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Privacy Policy - Community for Life</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 20px;
+      background-color: #f9f9f9;
+      color: #333;
+    }
+    h1 {
+      text-align: center;
+      color: #2c3e50;
+    }
+    h2 {
+      margin-top: 25px;
+      color: #34495e;
+    }
+    p {
+      margin-bottom: 15px;
+    }
+    .last-updated {
+      text-align: center;
+      font-style: italic;
+      color: #666;
+      margin-bottom: 30px;
+    }
+    ul {
+      margin-left: 20px;
+    }
+    footer {
+      margin-top: 30px;
+      padding-top: 15px;
+      border-top: 1px solid #ccc;
+      text-align: center;
+      font-size: 0.9em;
+      color: #555;
+    }
+    footer a {
+      color: #2980b9;
+      text-decoration: none;
+    }
+    footer a:hover {
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <h1>Privacy Policy</h1>
-  <p>Last updated: August 15, 2025</p>
-  <p>Community for life we operates the CFL mobile application.
-This Privacy Policy explains how we collect, use, and protect your information when you use our Service.
+  <p class="last-updated">Last updated: August 15, 2025</p>
 
-1. Information We Collect
-We may collect the following information:
+  <p>Community for Life (“we,” “our,” or “us”) operates the CFL mobile application. This Privacy Policy explains how we collect, use, and protect your information when you use our Service.</p>
 
-a. Personal Information
-Name, email address, phone number, profile picture, date of birth, gender, and location.
-Login credentials (encrypted).
+  <h2>1. Information We Collect</h2>
+  <ul>
+    <li><strong>Personal Information:</strong> Name, email address, phone number, profile picture, date of birth, gender, and location. Login credentials (encrypted).</li>
+    <li><strong>Usage Information:</strong> Posts, comments, messages, likes, and other interactions. Device information (device type, operating system, unique device identifiers), IP address, browser type, and app usage statistics.</li>
+    <li><strong>Media & Files:</strong> Photos, videos, and audio files you upload.</li>
+  </ul>
 
-b. Usage Information
-Posts, comments, messages, likes, and other interactions.
-Device information (device type, operating system, unique device identifiers).
-IP address, browser type, and app usage statistics.
+  <h2>2. How We Use Your Information</h2>
+  <ul>
+    <li>Provide, operate, and improve our Service.</li>
+    <li>Personalize content and show relevant posts or products.</li>
+    <li>Enable communication between users (messages, comments, notifications).</li>
+    <li>Ensure security, detect fraud, and prevent misuse.</li>
+    <li>Comply with legal obligations.</li>
+  </ul>
 
-c. Media & Files
-Photos, videos, and audio files you upload.
+  <h2>3. Sharing Your Information</h2>
+  <p>We do not sell your personal information. We may share your information with:</p>
+  <ul>
+    <li>Service providers (e.g., cloud hosting, analytics).</li>
+    <li>Legal authorities when required by law.</li>
+    <li>Other users based on your privacy settings (e.g., posts, profile visibility).</li>
+  </ul>
 
-2. How We Use Your Information
-We use your information to:
-Provide, operate, and improve our Service.
-Personalize content and show relevant posts or products.
-Enable communication between users (messages, comments, notifications).
-Ensure security, detect fraud, and prevent misuse.
-Comply with legal obligations.
+  <h2>4. Your Privacy Choices</h2>
+  <ul>
+    <li>Access, update, or delete your account information in settings.</li>
+    <li>Control who can see your posts and profile.</li>
+    <li>Disable cookies or tracking in your browser (some features may not work).</li>
+  </ul>
 
-3. Sharing Your Information
-We do not sell your personal information.
-We may share your information with:
-Service providers (e.g., cloud hosting, analytics).
-Legal authorities when required by law.
-Other users based on your privacy settings (e.g., posts, profile visibility).
+  <h2>5. Data Retention</h2>
+  <p>We keep your personal information only as long as necessary to provide our Service or comply with laws. You can request deletion of your data at any time by contacting us.</p>
 
-4. Your Privacy Choices
-You can:
-Access, update, or delete your account information in settings.
-Control who can see your posts and profile.
-Disable cookies or tracking in your browser (some features may not work).
+  <h2>6. Security</h2>
+  <p>We use industry-standard encryption and secure storage methods to protect your data, but no system is 100% secure.</p>
 
-5. Data Retention
-We keep your personal information only as long as necessary to provide our Service or comply with laws.
-You can request deletion of your data at any time by contacting us.
+  <h2>7. Children's Privacy</h2>
+  <p>Our Service is not directed to children under 13. If we learn we have collected personal information from a child, we will delete it.</p>
 
-6. Security
-We use industry-standard encryption and secure storage methods to protect your data, but no system is 100% secure.
+  <h2>8. Changes to This Policy</h2>
+  <p>We may update this Privacy Policy from time to time. The updated version will be posted with a new “Last updated” date.</p>
 
-7. Children's Privacy
-Our Service is not directed to children under 13. If we learn we have collected personal information from a child, we will delete it.
-
-8. Changes to This Policy
-We may update this Privacy Policy from time to time. The updated version will be posted with a new “Last updated” date.
-
-9. Contact Us
-If you have questions about this Privacy Policy, contact us at:
-📧 Email: communityforlife03@gmail.com</p>
+  <h2>9. Contact Us</h2>
+  <p>If you have questions about this Privacy Policy, contact us at:</p>
+  <footer>
+    📧 Email: <a href="mailto:communityforlife03@gmail.com">communityforlife03@gmail.com</a>
+  </footer>
 </body>
 </html>
