--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <li><strong>Personal Information:</strong> Name, email address, phone number, profile picture, date of birth, gender, and location. Login credentials (encrypted).</li>
     <li><strong>Usage Information:</strong> Posts, comments, messages, likes, and other interactions. Device information (device type, operating system, unique device identifiers), IP address, browser type, and app usage statistics.</li>
     <li><strong>Media & Files:</strong> Photos, videos, and audio files you upload.</li>
+    <li><strong>Chat Messages:</strong> Messages you send or receive through our chat feature are stored securely to enable messaging functionality, sync conversations across devices, and allow for moderation in cases of abuse reports or legal requirements.</li>
   </ul>
 
   <h2>2. How We Use Your Information</h2>
@@ -73,7 +74,15 @@
     <li>Comply with legal obligations.</li>
   </ul>
 
-  <h2>3. Sharing Your Information</h2>
+  <h2>3. Reporting & Moderation of User-Generated Content</h2>
+  <p>We provide tools for reporting inappropriate or harmful content. When you report content, the following may occur:</p>
+  <ul>
+    <li>The reported content, along with relevant user information, may be reviewed by our moderation team.</li>
+    <li>In cases of legal requirements, we may share the reported content with law enforcement authorities.</li>
+    <li>We may take actions such as content removal, account suspension, or permanent bans based on our community guidelines.</li>
+  </ul>
+
+  <h2>4. Sharing Your Information</h2>
   <p>We do not sell your personal information. We may share your information with:</p>
   <ul>
     <li>Service providers (e.g., cloud hosting, analytics).</li>
@@ -81,26 +90,26 @@
     <li>Other users based on your privacy settings (e.g., posts, profile visibility).</li>
   </ul>
 
-  <h2>4. Your Privacy Choices</h2>
+  <h2>5. Your Privacy Choices</h2>
   <ul>
     <li>Access, update, or delete your account information in settings.</li>
     <li>Control who can see your posts and profile.</li>
     <li>Disable cookies or tracking in your browser (some features may not work).</li>
   </ul>
 
-  <h2>5. Data Retention</h2>
-  <p>We keep your personal information only as long as necessary to provide our Service or comply with laws. You can request deletion of your data at any time by contacting us.</p>
+  <h2>6. Data Retention</h2>
+  <p>We keep your personal information, including chat messages, only as long as necessary to provide our Service or comply with laws. You can request deletion of your data at any time by contacting us.</p>
 
-  <h2>6. Security</h2>
+  <h2>7. Security</h2>
   <p>We use industry-standard encryption and secure storage methods to protect your data, but no system is 100% secure.</p>
 
-  <h2>7. Children's Privacy</h2>
+  <h2>8. Children's Privacy</h2>
   <p>Our Service is not directed to children under 13. If we learn we have collected personal information from a child, we will delete it.</p>
 
-  <h2>8. Changes to This Policy</h2>
+  <h2>9. Changes to This Policy</h2>
   <p>We may update this Privacy Policy from time to time. The updated version will be posted with a new “Last updated” date.</p>
 
-  <h2>9. Contact Us</h2>
+  <h2>10. Contact Us</h2>
   <p>If you have questions about this Privacy Policy, contact us at:</p>
   <footer>
     📧 Email: <a href="mailto:communityforlife03@gmail.com">communityforlife03@gmail.com</a>
